[items/sphere_item_deco_virtues.scp]: Misc updates
[items/sphere_item_holiday_anniversary.scp]: Added new items from publish 106
[items/sphere_item_profession_cook_barkeep_baker.scp]: Added new items from publish 106
[sphere_skills.scp]: Updated Anatomy, Animal Lore, Arms Lore, Eval Int, Fishing, Forensic Eval, Item ID, Lumberjacking, Mining and Taste ID skills

18-05-2020, Coruja
Changed: Optimized internal network socket engine.
Fixed: Server crash when console get many "variable exceeded max length" warnings in a row.

31-05-2020, Coruja
Fixed: Spells DURATION not working correctly.
Fixed: Wandering NPCs taking too much time to react.
Fixed: EF_ItemStacking experimental feature on sphere.ini not working correctly.

07-07-2020, DracoScript
Fixed: Pre-AOS armor (AR) formula not working correctly.

07-07-2020, s0ckz
Fixed: Server crash when receive a invalid macro packet from client.

06-10-2020, Coruja
Fixed: Map starting locations not working correctly when scripts have multiple [STARTS] templates defined.
[sphereCrypt.ini]: Added crypt key for classic clients 7.0.86 ~ 7.0.87 and enhanced clients 4.0.86 ~ 4.0.87
[maps/sphere_map2.scp]: Updated 'Terort Skitas', 'Reg Volom' and 'Ki-Rin Passage' regions
[maps/sphere_map_points0.scp]: Updated [STARTS] and [MOONGATES] templates
[maps/sphere_map_points0_hs.scp]: Updated 'Underwater World' teleporters
[maps/sphere_map_points1.scp]: Added missing [STARTS] template and updated [MOONGATES] template
[maps/sphere_map_points4.scp]: Updated [MOONGATES] template
[maps/sphere_map_points5.scp]: Added missing [STARTS] template and updated [MOONGATES] template

02-12-2020, Coruja
[sphere_admin.scp]: Fixed dialog 'd_admin_player_notes' incorrectly inserting quote marks when writing account notes
[sphere_dialog.scp]: Updated dialog 'd_pet_release' and fixed dialog 'd_gmpage_info' incorrectly inserting quote marks on response text

03-02-2021, Coruja
Fixed: Windows build crashing at server startup when server name length is too long.