@@ -1,10 +1,10 @@
 //****************************************************************************
-// Copyright 2020 SphereServer development team
+// Copyright 2021 SphereServer development team
 // Licensed under the Apache License, Version 2.0 (the "License").
 // You may not use this file except in compliance with the License.
 // You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
 //****************************************************************************
-// FILE LAST UPDATED: Tuesday, Oct 6, 2020
+// FILE LAST UPDATED: Saturday, Feb 6, 2021
 
 // WARNING: Modifing this file, without knowing what you are doing, can make Sphere behave incorrectly.
 
@@ -22,6 +22,7 @@ ENC_TFISH  3 // Twofish
 
 [SPHERECRYPT]
 //Classic Clients
+7008800 03CEF207D 0AA1D527F ENC_TFISH // 7.0.88
 7008700 03CA0828D 0AA317E7F ENC_TFISH // 7.0.87
 7008600 03D7A689D 0AAE5227F ENC_TFISH // 7.0.86
 7008500 03D33D2AD 0AAC95E7F ENC_TFISH // 7.0.85
@@ -169,6 +170,7 @@ ENC_TFISH  3 // Twofish
 2000000 02D13A5FD 0A39D527F ENC_BFISH // 2.0.0
 
 //Enhanced Clients
+067900880 01EEF207D 0BB1D527F ENC_TFISH // 4.0.88
 067900870 01EA0828D 0BB317E7F ENC_TFISH // 4.0.87
 067900860 01F7A689D 0BBE5227F ENC_TFISH // 4.0.86
 067900850 01F33D2AD 0BBC95E7F ENC_TFISH // 4.0.85
